Update OpenAPI spec
